comments fixes